<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/bg3"
    tools:context=".about_us">

    <TextView
        android:id="@+id/about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/about_me" />

    <TextView
        android:id="@+id/deco1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_me"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:text="@string/line1" />

    <TextView
        android:id="@+id/about_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deco1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/about_text1" />

    <TextView
        android:id="@+id/about_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text1"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/about_text2" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="240dp"
        android:layout_height="190dp"
        android:layout_above="@id/about_text3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/img" />

    <TextView
        android:id="@+id/about_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/deco2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple_500"
        android:textSize="23sp"
        android:text="@string/about_text3" />

    <TextView
        android:id="@+id/deco2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/backBtn"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:text="@string/line1" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:paddingHorizontal="30dp"
        android:onClick="back"
        android:textSize="20sp"
        android:text="@string/back" />

</RelativeLayout>